--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,35 @@
+body {
+    background-image: linear-gradient(
+        180deg,
+        rgb(224, 127, 238),
+        rgb(251, 251, 186)
+    );
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,700;1,300;1,400;1,700&family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 h1, h2, h3, p, li {
     font-family: 'Heebo','Helvetica', 'sans-serif';
+}
+
+#mainContainer {
+    width: 80%;
+    margin: 0 auto;
+}
+
+footer {
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: black
+}
+
+a:hover {
+    color: #777;
+    text-decoration: underline;
 }
